# pytorch-gpu-template

./: .env  .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  package-lock.json  package.json  poetry.toml  project.code-workspace  pyproject.toml
.config/: coverage.toml  pytest.toml  ruff.toml  taplo.toml
.config/extras/: .p10k.zsh  .zshrc  github-markdown.css
.config/scripts/: cache-clean.sh  cache_clean.sh  extensions.txt  install_script.sh  post-create.sh  update-script.sh  update_script.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: dependabot.yml
src/: pytest.toml
src/aindsys/: gpu_check.py
