#:schema https://json.schemastore.org/pyproject

[project]
description     = "Description of project"
name            = "my-package"
dynamic         = [ "version" ]
requires-python = ">=3.12,<4.0"

[tool.poetry]
package-mode = false

packages = [ { include = "aindsys", from = "src" } ]

exclude = [
    # .gitignore contents automatically excluded
    "**/docs",
    "**/examples",
    "**/notebooks",
    "**/test*",
    "pytest.toml",
]

    [tool.poetry.dependencies]


    [tool.poetry.group.pytorch.dependencies]
    torch       = "^2.6.0"
    torchvision = "^0.21.0"

    [tool.poetry.group.dev.dependencies]
    pre-commit = "^4.1.0"
    ruff       = "^0.9.7"
    pyright    = "^1.1.394"

    [tool.poetry.group.test.dependencies]
    pytest         = "^8.3.4"
    pytest-cov     = "^6.0.0"
    pytest-ruff    = "^0.4.1"
    pytest-pyright = "^0.0.6"

    [tool.poetry.group.utils.dependencies]
    pathlib = "^1.0.1"

    [tool.poetry.group.jupyter.dependencies]
    notebook = "^7.1.2"


[build-system]
build-backend = "poetry.core.masonry.api"
requires      = [ "poetry-core" ]
backend-path  = [ "src" ]

#:schema https://raw.githubusercontent.com/microsoft/pyright/main/packages/vscode-pyright/schemas/pyrightconfig.schema.json
# ::: Pyright Configuration :::
[tool.pyright]
defineConstant = { DEBUG = true }
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.venv",
    "**/site-packages",
]
ignore = [ "**/*.pyc", "**/<ipython-input-*>" ]
include = [ "src" ]

executionEnvironments = [
    { root = "src" },
    { root = "tests", extraPaths = [ "src", "tests" ] },
]

# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#diagnostic-rule-defaults
reportMissingImports   = true
reportMissingTypeStubs = false
typeCheckingMode       = "standard"
